--- a/bosses/aokiji.html
+++ b/bosses/aokiji.html
@@ -4,7 +4,7 @@
 <head>
     <title>AOKIJI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style_raid.css">
+    <link rel="stylesheet" type="text/css" href="style_boss.css">
 </head>
 
 <body>
